next js server implemented - no need for the backend

--- a/website/package.json
+++ b/website/package.json
@@ -9,6 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "bcrypt": "^5.1.0",
+    "jsonwebtoken": "^8.5.1",
+    "mongodb": "^4.10.0",
+    "mongoose": "^6.6.5",
+    "mongoose-plugin-autoinc": "^1.1.9",
     "next": "12.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
